--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "picklejs",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "main": "buildLib",
   "dependencies": {
@@ -13,7 +13,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "buildLib": "babel --copy-files --plugins add-module-exports --plugins transform-es2015-modules-umd lib/  --out-dir ./buildLib --source-maps",
+    "buildLib": "babel --copy-files --plugins add-module-exports --plugins transform-es2015-modules-umd lib/  --out-dir ./buildLib --source-maps && yarn version --new-version minor && git add -A .",
     "prepush": "yarn build && yarn buildLib"
   },
   "devDependencies": {
