--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "main": "buildLib",
   "dependencies": {
+    "cypress-cucumber-preprocessor": "^1.2.2",
+    "cypress-image-snapshot": "^2.0.1",
     "hex-rgb": "^3.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -14,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "watch": "babel-watch --copy-files --plugins add-module-exports --plugins transform-es2015-modules-umd lib  --out-dir ./buildLib --source-maps",
+    "watch": "babel --watch --copy-files --plugins add-module-exports --plugins transform-es2015-modules-umd lib/  --out-dir ./buildLib --source-maps",
     "buildLib": "babel --copy-files --plugins add-module-exports --plugins transform-es2015-modules-umd lib/  --out-dir ./buildLib --source-maps && yarn version --new-version minor && git add -A .",
     "prepush": "yarn build && yarn buildLib"
   },
