--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "watch": "babel --watch --copy-files --plugins add-module-exports --plugins transform-es2015-modules-umd lib/  --out-dir ./buildLib --source-maps",
-    "buildLib": "babel --copy-files --plugins add-module-exports --plugins transform-es2015-modules-umd lib/  --out-dir ./buildLib --source-maps && yarn version --new-version minor",
+    "buildLib": "babel --copy-files lib/  --out-dir ./buildLib --source-maps && yarn version --new-version minor",
     "prepush": "yarn build && yarn buildLib"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-watch": "^2.0.7"
   }
 }
