--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,12 @@ typings/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+lib/core/metadata.js
+lib/core/MetadataBlog.js
+
+website/translated_docs
+website/build/
+website/yarn.lock
+website/node_modules
+website/i18n/*
