--- a/website/package.json
+++ b/website/package.json
@@ -9,9 +9,12 @@
     "rename-version": "docusaurus-rename-version"
   },
   "devDependencies": {
+    "cypress": "^3.1.0",
     "docusaurus": "^1.3.3"
   },
   "dependencies": {
-    "react-iframe": "^1.2.0"
+    "@tolicodes/picklejs": "^0.74.0",
+    "react-iframe": "^1.2.0",
+    "words-to-numbers": "^1.5.1"
   }
 }
