--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@tolicodes/picklejs",
-  "version": "0.74.0",
+  "version": "0.75.0",
   "main": "buildLib",
   "dependencies": {
     "cypress-cucumber-preprocessor": "^1.2.2",
     "cypress-image-snapshot": "^2.0.1",
-    "hex-rgb": "^3.0.0"
+    "hex-rgb": "^3.0.0",
+    "pluralize": "^7.0.0"
   },
   "scripts": {
     "start": "cd website && yarn start",
