--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "cypress-cucumber-preprocessor": "^1.2.2",
     "cypress-image-snapshot": "^2.0.1",
     "hex-rgb": "^3.0.0",
-    "pluralize": "^7.0.0"
+    "pluralize": "^7.0.0",
+    "words-to-numbers": "^1.5.1"
   },
   "scripts": {
     "start": "cd website && yarn start",
@@ -14,9 +15,9 @@
     "watch": "babel --watch lib/  --out-dir ./buildLib --source-maps",
     "buildSite": "cd website && yarn build",
     "prepush": "yarn build && yarn buildSite",
-    "cypress:open": "cd website && cypress open",
-    "cypress:run": "cd website && yarn run cypress run --record --key <YOUR_KEY>",
-    "cypress:ci": "cd website && yarn run cypress:run --parallel"
+    "cypress:open": "yarn --cwd website cypress open website",
+    "cypress:run": "yarn --cwd website cypress run --record --key <YOUR_KEY>",
+    "cypress:ci": "yarn --cwd website cypress --parallel"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
