--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "buildLib",
   "dependencies": {
     "cypress-cucumber-preprocessor": "^1.2.2",
-    "cypress-image-snapshot": "^2.2.1",
+    "cypress-image-snapshot": "~2.0.0",
     "hex-rgb": "^3.0.0",
     "pluralize": "^7.0.0",
     "words-to-numbers": "^1.5.1"
