--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "hex-rgb": "^3.0.0",
     "pluralize": "^7.0.0",
     "wdio-mocha-framework": "^0.6.4",
+    "wdio-visual-regression-service": "^0.9.0",
     "words-to-numbers": "^1.5.1"
   },
   "scripts": {
