--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "cypress-cucumber-preprocessor": "^1.2.2",
     "cypress-image-snapshot": "~1.0.2",
+    "express": "^4.16.4",
     "hex-rgb": "^3.0.0",
+    "minimatch": "^3.0.4",
     "pluralize": "^7.0.0",
     "wdio-mocha-framework": "^0.6.4",
     "wdio-visual-regression-service": "^0.9.0",
