--- a/website/package.json
+++ b/website/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "babelify": "^8.0.0",
     "cypress": "^3.1.0",
-    "docusaurus": "^1.3.3"
+    "docusaurus": "=1.3.3"
   },
   "dependencies": {
     "npm": "^6.4.0",
