--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.101.0",
   "main": "buildLib",
   "dependencies": {
+    "change-case": "^4.1.1",
     "cypress-cucumber-preprocessor": "^1.2.2",
     "cypress-image-snapshot": "3.1.1",
+    "faker": "git+https://github.com/Marak/faker.js.git",
     "hex-rgb": "^3.0.0",
     "pluralize": "^7.0.0",
     "wdio-visual-regression-service": "^0.9.0",
