--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "main": "buildLib",
   "dependencies": {
     "change-case": "^4.1.1",
-    "cypress-cucumber-preprocessor": "^1.2.2",
+    "cypress-cucumber-preprocessor": "^2.5.0",
     "cypress-image-snapshot": "3.1.1",
     "faker": "git+https://github.com/Marak/faker.js.git",
     "hex-rgb": "^3.0.0",
     "pluralize": "^7.0.0",
-    "wdio-visual-regression-service": "^0.9.0",
+    "wdio-visual-regression-service": "git+https://github.com/LukeLeber/wdio-visual-regression-service.git#wdio-5.x",
     "words-to-numbers": "^1.5.1"
   },
   "scripts": {
@@ -22,12 +22,11 @@
     "test": "jest"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-watch": "^2.0.7",
+    "@babel/cli": "^7.10.1",
+    "@babel/plugin-transform-modules-umd": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
     "chai": "^4.2.0",
-    "jest": "=23.5.0",
-    "jest-cucumber": "^1.0.11"
+    "jest": "^26.0.1",
+    "jest-cucumber": "^2.0.13"
   }
 }
