--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "picklejs",
-  "version": "0.101.0",
+  "version": "0.102.0",
   "main": "buildLib",
   "dependencies": {
     "change-case": "^4.1.1",
     "cypress-cucumber-preprocessor": "^2.5.0",
     "cypress-image-snapshot": "3.1.1",
-    "faker": "git+https://github.com/Marak/faker.js.git",
+    "faker": "git+https://github.com/faker-js/faker",
     "hex-rgb": "^3.0.0",
     "pluralize": "^7.0.0",
     "wdio-visual-regression-service": "git+https://github.com/LukeLeber/wdio-visual-regression-service.git#wdio-5.x",
